--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										Google Scholar</a></li>
 								<li class="mb-0"><i class="fa-solid fa-graduation-cap fa-fw fa-lg me-2"></i>
 									<a class="resume-link" href="https://search.asu.edu/profile/3104472" target="_blank">
-										Arizona State University</li>
+										Arizona State University<a/></li>
 							</ul>
 						</div><!--//resume-contact-->
 					</div><!--//row-->
@@ -476,9 +476,15 @@
 						<hr>
 						<div class="resume-footer text-center">
 							<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">github.com/ko-ahra</span></a></li>
-								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
-								<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="#"><i class="fab fa-twitter-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">@twittername</span></a></li>
+								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#">
+									<i class="fa-brand fa-github fa-2x me-2" data-fa-transform="down-4"></i>
+									<span class="d-none d-lg-inline-block text-muted">github.com/ko-ahra</span></a></li>
+								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#">
+									<i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i>
+									<span class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
+								<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="#">
+									<i class="fab fa-twitter-square fa-2x me-2" data-fa-transform="down-4"></i>
+									<span class="d-none d-lg-inline-block text-muted">@twittername</span></a></li>
 							</ul>
 						</div><!--//resume-footer-->
 					</article>
