--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-envelope fa-fw fa-lg me-2"></i>
 									ahrako@asu.edu</a></li>
-								<li class="mb-2"><i class="fas fa-brand fa-orcid fa-fw fa-lg me-2 "></i>
+								<li class="mb-2"><i class="fa-brand fa-orcid fa-fw fa-lg me-2 "></i>
 									<a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target ="_blank">
 										0000-0002-7295-1097</a></li>
-								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i>
+								<li class="mb-2"><i class="fa-brands fa-google fa-fw fa-lg me-2"></i>
 									<a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target="_blank">
 										Google Scholar</a></li>
 								<li class="mb-0"><i class="fa-solid fa-graduation-cap fa-fw fa-lg me-2"></i>
