--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-envelope fa-fw fa-lg me-2"></i>
 									ahrako@asu.edu</a></li>
-								<li class="mb-2"><i class="fa-brand fa-orcid fa-fw fa-lg me-2 "></i>
+								<li class="mb-2"><i class="fa-brands fa-orcid fa-fw fa-lg me-2 "></i>
 									<a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target ="_blank">
 										0000-0002-7295-1097</a></li>
 								<li class="mb-2"><i class="fa-brands fa-google fa-fw fa-lg me-2"></i>
@@ -476,14 +476,14 @@
 						<hr>
 						<div class="resume-footer text-center">
 							<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#">
+								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="ko-ahra.github.io" target = "_blank">
 									<i class="fa-brand fa-github fa-2x me-2" data-fa-transform="down-4"></i>
 									<span class="d-none d-lg-inline-block text-muted">github.com/ko-ahra</span></a></li>
-								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#">
-									<i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i>
-									<span class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
-								<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="#">
-									<i class="fab fa-twitter-square fa-2x me-2" data-fa-transform="down-4"></i>
+								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target = "_blank">
+									<i class="fa-brands fa-google fa-2x me-2" data-fa-transform="down-4"></i>
+									<span class="d-none d-lg-inline-block text-muted">0000-0002-7295-1097</span></a></li>
+								<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank">
+									<i class="fa-bands fa-ordid fa-2x me-2" data-fa-transform="down-4"></i>
 									<span class="d-none d-lg-inline-block text-muted">@twittername</span></a></li>
 							</ul>
 						</div><!--//resume-footer-->
