--- a/index.html
+++ b/index.html
@@ -353,13 +353,13 @@
 									<div class="item-content">
 										<strong>Evolution, Ecology, & Social Behavior</strong></div>
 									<ul class="list-unstyled resume-lab-list">
-										<li class="mb-2">Steven L. Neuberg</li>
+										<li class="mb-2"><span class="text-muted">Steven L. Neuberg</li>
 										</ul>
 									</div><!--//item-->
 									<div class="item">
 										<div class="item-content">
 											<strong>Evolutionary Social Cognition</strong></div>
-										<ul class="list-unstyled resume-lab-list">
+										<ul class="list-unstyled resume-lab-list"><span class="text-muted">
 											<li>Douglas T. Kenrick</li>
 											<li>Steven L. Neuberg</li>
 											<li>D. Vaughn Becker<li>
@@ -369,14 +369,14 @@
 											<div class="item-content">
 												<strong>Culture & Ecology</strong></div>
 											<ul class="list-unstyled resume-lab-list">
-												<li class="mb-2">Michael E. W. Varnum</li>
+												<li class="mb-2"><span class="text-muted">Michael E. W. Varnum</li>
 												</ul>
 											</div><!--//item-->
 										<div class="item">
 											<div class="item-content">
 												<strong>Happiness & Culture</strong></div>
 											<ul class="list-unstyled resume-lab-list">
-												<li class="mb-2">Eunkook M. Suh</li>
+												<li class="mb-2"><span class="text-muted">Eunkook M. Suh</li>
 												</ul>
 											</div><!--//item-->
 									</section><!--//lab-section-->
@@ -484,7 +484,7 @@
 									<span class="d-none d-lg-inline-block text-muted">0000-0002-7295-1097</span></a></li>
 								<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank">
 									<i class="fa-bands fa-ordid fa-2x me-2" data-fa-transform="down-4"></i>
-									<span class="d-none d-lg-inline-block text-muted">@twittername</span></a></li>
+									<span class="d-none d-lg-inline-block text-muted">Ahra Ko</span></a></li>
 							</ul>
 						</div><!--//resume-footer-->
 					</article>
