--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 									<div class="item-content">
 										<strong>Evolution, Ecology, & Social Behavior</strong></div>
 									<ul class="list-unstyled resume-lab-list">
-										<li class="mb-2"><span class="text-muted">Steven L. Neuberg</li>
+										<li class="mb-2"><span class="text-muted">Steven L. Neuberg</span></li>
 										</ul>
 									</div><!--//item-->
 									<div class="item">
@@ -362,21 +362,21 @@
 										<ul class="list-unstyled resume-lab-list"><span class="text-muted">
 											<li>Douglas T. Kenrick</li>
 											<li>Steven L. Neuberg</li>
-											<li>D. Vaughn Becker<li>
+											<li>D. Vaughn Becker</span></li>
 											</ul>
 										</div><!--//item-->
 										<div class="item">
 											<div class="item-content">
 												<strong>Culture & Ecology</strong></div>
 											<ul class="list-unstyled resume-lab-list">
-												<li class="mb-2"><span class="text-muted">Michael E. W. Varnum</li>
+												<li class="mb-2"><span class="text-muted">Michael E. W. Varnum<</span>/li>
 												</ul>
 											</div><!--//item-->
 										<div class="item">
 											<div class="item-content">
 												<strong>Happiness & Culture</strong></div>
 											<ul class="list-unstyled resume-lab-list">
-												<li class="mb-2"><span class="text-muted">Eunkook M. Suh</li>
+												<li class="mb-2"><span class="text-muted">Eunkook M. Suh</span></li>
 												</ul>
 											</div><!--//item-->
 									</section><!--//lab-section-->
@@ -480,10 +480,10 @@
 									<i class="fa-brands fa-github fa-2x me-2" data-fa-transform="down-4"></i>
 									<span class="d-none d-lg-inline-block text-muted">github.com/ko-ahra</span></a></li>
 								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target = "_blank">
-									<i class="fa-brands fa-google fa-2x me-2" data-fa-transform="down-4"></i>
+									<i class="fa-brands fa-orcid fa-2x me-2" data-fa-transform="down-4"></i>
 									<span class="d-none d-lg-inline-block text-muted">0000-0002-7295-1097</span></a></li>
 								<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank">
-									<i class="fa-bands fa-ordid fa-2x me-2" data-fa-transform="down-4"></i>
+									<i class="fa-bands fa-google fa-2x me-2" data-fa-transform="down-4"></i>
 									<span class="d-none d-lg-inline-block text-muted">Ahra Ko</span></a></li>
 							</ul>
 						</div><!--//resume-footer-->
