--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 											<div class="item-content">
 												<strong>Culture & Ecology</strong></div>
 											<ul class="list-unstyled resume-lab-list">
-												<li class="mb-2"><span class="text-muted">Michael E. W. Varnum<</span>/li>
+												<li class="mb-2"><span class="text-muted">Michael E. W. Varnum</span></li>
 												</ul>
 											</div><!--//item-->
 										<div class="item">
@@ -441,9 +441,10 @@
 									<section class="statistic-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-3">Quantitative Training</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
-											<li>ANOVA | Kevin Grimm</li>
-											<li>Multiple regression | Leona Aiken</li>
-											<li>Multilevel & Longitudinal growth | Daniel McNeish</li>
+											<li>ANOVA <span class="text-muted">| Kevin Grimm</span></li>
+											<li>Multiple regression <span class="text-muted">| Leona Aiken</span></li>
+											<li>Quasi-Experiment Designs <span class="text-muted">| Stephen G. West</span></li>
+											<li>Multilevel & Longitudinal growth <span class="text-muted">| Daniel McNeish</span></li>
 										</ul>
 									</section><!--//statistic-section-->
 
