--- a/index.html
+++ b/index.html
@@ -477,13 +477,16 @@
 						<hr>
 						<div class="resume-footer text-center">
 							<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="ko-ahra.github.io" target = "_blank">
+								<li class="list-inline-item mb-lg-0 me-3">
+									<a class="resume-link" href="https://ko-ahra.github.io" target = "_blank">
 									<i class="fa-brands fa-github fa-2x me-2" data-fa-transform="down-4"></i>
 									<span class="d-none d-lg-inline-block text-muted">github.com/ko-ahra</span></a></li>
-								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target = "_blank">
+								<li class="list-inline-item mb-lg-0 me-3">
+									<a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target = "_blank">
 									<i class="fa-brands fa-orcid fa-2x me-2" data-fa-transform="down-4"></i>
 									<span class="d-none d-lg-inline-block text-muted">0000-0002-7295-1097</span></a></li>
-								<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank">
+								<li class="list-inline-item mb-lg-0 me-lg-3">
+									<a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank">
 									<i class="fa-bands fa-google fa-2x me-2" data-fa-transform="down-4"></i>
 									<span class="d-none d-lg-inline-block text-muted">Ahra Ko</span></a></li>
 							</ul>
