--- a/index.html
+++ b/index.html
@@ -443,10 +443,18 @@
 										<ul class="list-unstyled resume-interests-list mb-0">
 											<li>ANOVA <span class="text-muted">| Kevin Grimm</span></li>
 											<li>Multiple regression <span class="text-muted">| Leona Aiken</span></li>
-											<li>Quasi-Experiment Designs <span class="text-muted">| Stephen G. West</span></li>
+											<li>Quasi-experiment designs <span class="text-muted">| Stephen G. West</span></li>
 											<li>Multilevel & Longitudinal growth <span class="text-muted">| Daniel McNeish</span></li>
 										</ul>
 									</section><!--//statistic-section-->
+
+									<section class="talk-section py-3">
+										<h3 class="text-uppercase resume-section-heading mb-3">Language</h3>
+										<ul class="list-unstyled resume-lang-list">
+											<li class="mb-2">Korean, English</li>
+											<li>R, SPSS, Mplus, SAS, HTML </li>
+										</ul>
+									</section><!--//talk-section-->
 
 									<section class="reference-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-3">Reference</h3>
