--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 									<span class="d-none d-lg-inline-block text-muted">0000-0002-7295-1097</span></a></li>
 								<li class="list-inline-item mb-lg-0 me-lg-3">
 									<a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank">
-									<i class="fa-bands fa-google fa-2x me-2" data-fa-transform="down-4"></i>
+									<i class="fa-brands fa-google fa-2x me-2" data-fa-transform="down-4"></i>
 									<span class="d-none d-lg-inline-block text-muted">Ahra Ko</span></a></li>
 							</ul>
 						</div><!--//resume-footer-->
