--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
 								<li class="mb-2"><i class="fa-brands fa-orcid fa-fw fa-lg me-2 "></i>
 									<a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target ="_blank">
 										0000-0002-7295-1097</a></li>
-								<li class="mb-2"><i class="fa-brands fa-google fa-fw fa-lg me-2"></i>
+								<li class="mb-0"><i class="fa-brands fa-google fa-fw fa-lg me-2"></i>
 									<a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target="_blank">
 										Google Scholar</a></li>
-								<li class="mb-0"><i class="fa-solid fa-graduation-cap fa-fw fa-lg me-2"></i>
-									<a class="resume-link" href="https://search.asu.edu/profile/3104472" target="_blank">
-										Arizona State University<a/></li>
 							</ul>
 						</div><!--//resume-contact-->
 					</div><!--//row-->
@@ -488,7 +485,7 @@
 								<li class="list-inline-item mb-lg-0 me-3">
 									<a class="resume-link" href="https://ko-ahra.github.io" target = "_blank">
 									<i class="fa-brands fa-github fa-2x me-2" data-fa-transform="down-4"></i>
-									<span class="d-none d-lg-inline-block text-muted">github.com/ko-ahra</span></a></li>
+									<span class="d-none d-lg-inline-block text-muted">Ko-Ahra.github.io</span></a></li>
 								<li class="list-inline-item mb-lg-0 me-3">
 									<a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target = "_blank">
 									<i class="fa-brands fa-orcid fa-2x me-2" data-fa-transform="down-4"></i>
@@ -496,7 +493,11 @@
 								<li class="list-inline-item mb-lg-0 me-lg-3">
 									<a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank">
 									<i class="fa-brands fa-google fa-2x me-2" data-fa-transform="down-4"></i>
-									<span class="d-none d-lg-inline-block text-muted">Ahra Ko</span></a></li>
+									<span class="d-none d-lg-inline-block text-muted">Google Scholar</span></a></li>
+								<li class="list-inline-item mb-lg-0 me-lg-3">
+									<a class="resume-link" href="https://search.asu.edu/profile/3104472" target="_blank">
+									<i class="fa-solid fa-graduation-cap fa-2x me-2" data-fa-transform="down-4"></i>
+											Arizona State University<a/></li>
 							</ul>
 						</div><!--//resume-footer-->
 					</article>
