--- a/index.html
+++ b/index.html
@@ -485,11 +485,11 @@
 								<li class="list-inline-item mb-lg-0 me-3">
 									<a class="resume-link" href="https://ko-ahra.github.io" target = "_blank">
 									<i class="fa-brands fa-github fa-2x me-2" data-fa-transform="down-4"></i>
-									<span class="d-none d-lg-inline-block text-muted">Ko-Ahra.github.io</span></a></li>
+									<span class="d-none d-lg-inline-block text-muted">github</span></a></li>
 								<li class="list-inline-item mb-lg-0 me-3">
 									<a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target = "_blank">
 									<i class="fa-brands fa-orcid fa-2x me-2" data-fa-transform="down-4"></i>
-									<span class="d-none d-lg-inline-block text-muted">0000-0002-7295-1097</span></a></li>
+									<span class="d-none d-lg-inline-block text-muted">ORCID</span></a></li>
 								<li class="list-inline-item mb-lg-0 me-lg-3">
 									<a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank">
 									<i class="fa-brands fa-google fa-2x me-2" data-fa-transform="down-4"></i>
@@ -497,7 +497,7 @@
 								<li class="list-inline-item mb-lg-0 me-lg-3">
 									<a class="resume-link" href="https://search.asu.edu/profile/3104472" target="_blank">
 									<i class="fa-solid fa-graduation-cap fa-2x me-2" data-fa-transform="down-4"></i>
-											Arizona State University<a/></li>
+											Arizona State University</span><a/></li>
 							</ul>
 						</div><!--//resume-footer-->
 					</article>
