--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 								<li class="list-inline-item mb-lg-0 me-lg-4">
 									<a class="resume-link" href="https://search.asu.edu/profile/3104472" target="_blank">
 									<i class="fa-solid fa-graduation-cap fa-2x me-2" data-fa-transform="down-4"></i>
-											Arizona State University</span><a/></li>
+									<span class="d-none d-lg-inline-block text-muted">Arizona State University</span><a/></li>
 							</ul>
 						</div><!--//resume-footer-->
 					</article>
