--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							</section><!--//education-section-->
 
 							<section class="award-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-3">Honors & Award</h3>
+								<h3 class="text-uppercase resume-section-heading mb-3">Honor & Award</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2" style="padding-left: 10px;">
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
@@ -387,17 +387,17 @@
 									</section><!--//talk-section-->
 
 									<section class="RA-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-3">Research Assistant</h3>
+										<h3 class="text-uppercase resume-section-heading mb-3">National Science Foundation Projects</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-2">
 												<div class="resume-degree font-weight-bold">
-													[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health | 2020-2022</div>
+													RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health | 2020-2022</div>
 												<div class="resume-degree-time text-muted" style="padding-left: 5px;">
 													Steven L. Neuberg (PI) <br/>Michael E. W. Varnum <br/>D. Vaughn Becker</div>
 											</li>
 											<li class="mb-2">
 												<div class="resume-degree font-weight-bold">
-													[NSF] Fundamental Social Motives and Subjective Well-being Around the World | 2018-2021</div>
+													Fundamental Social Motives and Subjective Well-being Around the World | 2018-2021</div>
 												<div class="resume-degree-time text-muted" style="padding-left: 5px;">
 													Michael E. W. Varnum (PI) <br/>Douglas T. Kenrick</div>
 											</li>
