--- a/index.html
+++ b/index.html
@@ -459,17 +459,26 @@
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">Steven L. Neuberg</div>
 												<div class="resume-degree-org text-muted">Professor and Chair of Psychology</div>
+												<div class="resume-degree-org text-muted">Arizona State University</div>
 												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div>
 											</li>
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">Douglas T. Kenrick</div>
 												<div class="resume-degree-org text-muted">President’s Professor of Psychology</div>
+												<div class="resume-degree-org text-muted">Arizona State University</div>
 												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div>
 											</li>
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">Michael E. W. Varnum</div>
 												<div class="resume-degree-org text-muted">Associate Professor of Psychology</div>
+												<div class="resume-degree-org text-muted">Arizona State University</div>
 												<div class="resume-degree-time text-muted">mvarnum@asu.edu</div>
+											</li>
+											<li class="mb-1">
+												<div class="resume-degree font-weight-bold">Eunkook "Mark" Suh</div>
+												<div class="resume-degree-org text-muted">Professor of Psychology</div>
+												<div class="resume-degree-org text-muted">Yonsei University</div>
+												<div class="resume-degree-time text-muted">esuh@yonsei.ac.kr</div>
 											</li>
 										</ul>
 
