--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 									</section><!--//statistic-section-->
 
 									<section class="skills-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-3">Manuscript Review</h3>
+										<h3 class="text-uppercase resume-section-heading mb-3">Ad Hoc Manuscript Review</h3>
 										<ul class="list-unstyled resume-lang-list">
 											<li class="mb-0"><i>Journal of Personality and Social Psychology,
 												Psychological Science,
