--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 									</section><!--//talk-section-->
 
 									<section class="RA-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-3">National Science Foundation Projects</h3>
+										<h3 class="text-uppercase resume-section-heading mb-3">National Science Foundation Project</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-2">
 												<div class="resume-degree font-weight-bold">
