--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
 										<h4 class="item-title">Symposium Organizing</h4>
 									</div>
 									<div class="item-content" style="padding-left: 10px;">
-										<p><strong>Chair, COVID, Disease Psychology, and Politics</strong> (June, 2022).
+										<p><strong>Chair, "COVID, Disease Psychology, and Politics"</strong> (June, 2022).
 											Human Behavior & Evolution Society Conference, Virtual.
 											<br/>Speakers: <strong>Ahra Ko</strong>, Michael Bang Peterson, Lene Aarøe, Lei Fan.</p>
-										<p><strong>Co-chair, The Invisible Hand of Family: Why and How Kin Matter</strong> (February, 2020).
+										<p><strong>Co-chair, "The Invisible Hand of Family: Why and How Kin Matter"</strong> (February, 2020).
 											Society for Personality and Social Psychology Conference, New Orleans, Louisiana.
 											<br/>Speakers: <strong>Ahra Ko</strong>, Debra Lieberman, Oliver Sng, Jonathan Scultz.</p>
 									</div>
