--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 												[5.32] </p>
 										 	<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (2021).
 												<strong>Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive, robust (but unfounded) stereotype</strong>.
-												<i>Psychological Science, 32</i>(6), 871-889. [
-												10.17]</p>
+												<i>Psychological Science, 32</i>(6), 871-889.
+												[10.17]</p>
 										 	<p>03. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020).
 												<strong>Family matters: Rethinking the psychology of human social motivation</strong>.
 												<i>Perspectives on Psychological Science, 15</i>(1), 173-201.
@@ -236,6 +236,10 @@
 										<h4 class="item-title">Travel Award</h4>
 									</div>
 										<div class="item-heading row align-items-center mb-2" style="padding-left: 10px;">
+											<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+												<strong>Group Travel Grant</strong>, ASU Graduate and Professional Student Association</div>
+											<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+												2022</div>
 											<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 												<strong>The Graduate College Travel Award</strong>, ASU Graduate College</div>
 											<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
