--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 												<div class="resume-degree font-weight-bold">
 													Social Psychology</div>
 												<div class="resume-degree-time text-muted">
-													2022 Fall | 1.3 (1 = Most positive, 5 = Most negative)</div>
+													2022 Fall <br/>1.3 (1 = Most positive, 5 = Most negative)</div>
 											</li>
 										</ul>
 									</section>
