--- a/index.html
+++ b/index.html
@@ -453,7 +453,8 @@
 												Psychological Science,
 												Journal of Social and Personal Relationships,
 												Journal of Happiness Studies,
-												Personality and Individual Differences</i></li>
+												Personality and Individual Differences,
+												Child & Youth Care Forum</i></li>
 										</ul>
 									</section>
 
