--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 												<strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>.
 												<i>PNAS (Proceedings of the National Academy of Science)</i>
 												[12.78]</p>
-											<p>08. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (in press).
+											<p>08. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (2023).
 												<strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>.
 												<i>Journal of Happiness Studies</i>.
 												[4.09]</p>
