--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-envelope fa-fw fa-lg me-2"></i>
-									ahrako@asu.edu</a></li>
+									ahrako@wharton.upenn.edu</a></li>
 								<li class="mb-2"><i class="fa-brands fa-orcid fa-fw fa-lg me-2 "></i>
 									<a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target ="_blank">
 										0000-0002-7295-1097</a></li>
