--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
 					<div class="row">
 						<div class="resume-main col-12 col-lg-8 col-xl-9   pe-0   pe-lg-5">
 
+							<section class="Position-section py-3">
+							    <h3 class="text-uppercase resume-section-heading mb-4">Employment</h3>
+
+							    <div class="item mb-2" style="padding-left: 10px;">
+							        <div class="item-heading row align-items-center mb-2">
+							            <div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+							                <strong>Research Project Manager, <a href="https://bcfg.wharton.upenn.edu/" target="_blank" rel="noopener noreferrer">Behavior Change for Good initiative</a><br>
+							                The Wharton School of the University of Pennsylvania</strong>
+							            </div>
+							            <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+							                Philadelphia, PA | 2023 -
+							            </div>
+							        </div>
+							    </div><!--//item-->
+							</section>
+
 							<section class="education-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">education</h3>
 
