--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-											<strong>Ph.D. Social Psychology</strong> |<i> Arizona State University</i></div>
+											<strong>Ph.D. Social Psychology, <i> Arizona State University</i></strong></div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 											Tempe, AZ | 2017 - 2023</div>
 									</div>
@@ -109,7 +109,7 @@
 								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-											<strong>M.A. Social and Personality Psychology</strong> |<i>Yonsei University</i></div>
+											<strong>M.A. Social and Personality Psychology, <i>Yonsei University</i></strong> </div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 											Seoul, South Korea | 2015 - 2017</div>
 									</div>
@@ -118,7 +118,7 @@
 								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-											<strong>B.A. Psychology & Cognitive Science</strong> |<i>Yonsei University</i></div>
+											<strong>B.A. Psychology & Cognitive Science, <i>Yonsei University</i></strong></div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 											Seoul, South Korea | 2011 - 2015</div>
 									</div>
