--- a/index.html
+++ b/index.html
@@ -170,44 +170,39 @@
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
-										<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
 										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
-											<p>09. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review).
-												<strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>.
-												<i>PNAS (Proceedings of the National Academy of Science)</i>
-												[12.78]</p>
+											<p>10. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (in press).
+												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
+													A longitudinal investigation of functional flexibility</strong>.
+													<i>American Psychologist</i>.</p>
+											<p>09. <strong>Ko, A.</strong>, Bock, J. E., Ko, J., & Krems, J. A. (2023).
+												<strong>Contagious or prosocial? Perceptions of mask-wearers toward Whites and Asians:
+													A cross-cultural comparison during the early stage of the COVID-19 pandemic</strong>.
+													<i>Social and Personality Psychology Compass</i>, 17(11), e12880.</p>
 											<p>08. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (2023).
 												<strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>.
-												<i>Journal of Happiness Studies</i>.
-												[4.09]</p>
+												<i>Journal of Happiness Studies, 24</i>(2), 651-675</p>
 											<p>07. Pick, C. M., <strong>Ko, A.</strong>, Wormley, A. S., Wiezel, A., Kenrick, D. T., … & Varnum, M. E. W. (2022).
 												<strong>Family still matters: Human social motivation during a global pandemic</strong>.
-												<i>Evolution and Human Behavior, 43</i>(6), 527-535.
-												[5.33]</p>
+												<i>Evolution and Human Behavior, 43</i>(6), 527-535.</p>
 										 	<p>06. Pick, C. M., <strong>Ko, A.</strong>, Kenrick, D. T., … & Varnum, M. E. W. (2022).
 												<strong>Fundamental social motives measured across forty-two cultures in two waves</strong>.
-												<i>Scientific Data, 9</i>(1), 1-12.
-												[8.50]</p>
+												<i>Scientific Data, 9</i>(1), 1-12.</p>
 										 	<p>05. Barlev, M., <strong>Ko, A.</strong>, Krems, J. A., & Neuberg, S. L. (2022).
 												<strong>Weight location moderates weight-based self-devaluation and perceived social devaluation in women</strong>.
-												<i>Social Psychological and Personality Science, 19485506211060724</i>.
-												[5.32] </p>
+												<i>Social Psychological and Personality Science, 19485506211060724</i>.</p>
 										 	<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (2021).
 												<strong>Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive, robust (but unfounded) stereotype</strong>.
-												<i>Psychological Science, 32</i>(6), 871-889.
-												[10.17]</p>
+												<i>Psychological Science, 32</i>(6), 871-889.</p>
 										 	<p>03. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020).
 												<strong>Family matters: Rethinking the psychology of human social motivation</strong>.
-												<i>Perspectives on Psychological Science, 15</i>(1), 173-201.
-												[11.62]</p>
+												<i>Perspectives on Psychological Science, 15</i>(1), 173-201.</p>
 										 	<p>02. Becker, D. V., Rheem, H., Pick, C. M., <strong>Ko, A.</strong>, & Lafko, S. R. (2019).
 												<strong>Angry faces hold attention: Evidence of attentional adhesion in two paradigms</strong>.
-												<i>Progress in Brain Research, 247</i>.
-												[2.62]</p>
+												<i>Progress in Brain Research, 247</i>.</p>
 										 	<p>01. <strong>Ko, A.</strong>, & Suh, E. M. (2019).
 												<strong>Does physical attractiveness buy happiness? Women’s mating motivation and happiness</strong>.
-												<i>Motivation and Emotion, 43</i>(1), 1–11.
-												[4.14]</p>
+												<i>Motivation and Emotion, 43</i>(1), 1–11.</p>
 									 </div>
 								 </div><!--//item-->
 							 </div>
