--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
 											<p>10. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (in press).
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
 													A longitudinal investigation of functional flexibility</strong>.
-													<i>American Psychologist</i>.</p>
+													<i>American Psychologist</i>.
+												<a href="https://osf.io/q5bv3">[Preprint]</a> | <a href="https://osf.io/xuckv/">[OSF]</a>
+											</p>
 											<p>09. <strong>Ko, A.</strong>, Bock, J. E., Ko, J., & Krems, J. A. (2023).
 												<strong>Contagious or prosocial? Perceptions of mask-wearers toward Whites and Asians:
 													A cross-cultural comparison during the early stage of the COVID-19 pandemic</strong>.
