--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
 													A longitudinal investigation of functional flexibility</strong>.
 													<i>American Psychologist</i>.
-												<a href="https://osf.io/q5bv3" target="_blank">[Preprint]</a> |
-												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</a>
+												<a href="https://osf.io/q5bv3" target="_blank"><i class="fas fa-file-alt"></i></a> |
+												<a href="https://osf.io/xuckv/" target="_blank"><i class="fab fa-osf"></i></a>
 											</p>
 											<p>09. <strong>Ko, A.</strong>, Bock, J. E., Ko, J., & Krems, J. A. (2023).
 												<strong>Contagious or prosocial? Perceptions of mask-wearers toward Whites and Asians:
