--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
 													A longitudinal investigation of functional flexibility</strong>.
 													<i>American Psychologist</i>.
-												<a href="https://osf.io/q5bv3" target="_blank"><i class="fas fa-file-alt"></i></a> |
-												<a href="https://osf.io/xuckv/" target="_blank"><i class="fab fa-osf"></i></a>
+												<a href="https://osf.io/q5bv3" target="_blank">[Preprint]</a> |
+												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</i></a>
 											</p>
 											<p>09. <strong>Ko, A.</strong>, Bock, J. E., Ko, J., & Krems, J. A. (2023).
 												<strong>Contagious or prosocial? Perceptions of mask-wearers toward Whites and Asians:
@@ -261,6 +261,9 @@
 										<h4 class="item-title">Symposium Organizing</h4>
 									</div>
 									<div class="item-content" style="padding-left: 10px;">
+										<p><strong>“Human values: An integrative perspective”</strong> (October, 2023).
+											Society of Experimental Social Psychology, Madison, Wisconsin.
+											<br/>Speakers: <strong>Ahra Ko</strong>, Daniel Sznycer, Joshua Jackson, Igor Grossmann.</p>
 										<p><strong>Chair, "COVID, Disease Psychology, and Politics"</strong> (June, 2022).
 											Human Behavior & Evolution Society Conference, Virtual.
 											<br/>Speakers: <strong>Ahra Ko</strong>, Michael Bang Peterson, Lene Aarøe, Lei Fan.</p>
@@ -303,9 +306,15 @@
 										<h4 class="item-title">Paper Presentation & Talk</h4>
 									</div>
 									<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
+										<p>13. <strong>Ko, A.</strong>, Duckworth, A. L., & Milkman, K. L. (February, 2024).
+											A 140,000-teacher megastudy of email nudges to encourage math progress.
+											Paper presentation at the Society for Personality and Social Psychology conference, San Diego, California.</p>
+										<p>12. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., & Kenrick, D. T. (October, 2023).
+											Valuing motives: A cross-cultural analysis of fundamental social motives in 42 countries before and during the pandemic.
+											Paper presentation at the Society of Experimental Social Psychology, Madison, Wisconsin. </p>
 										<p>11. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (June, 2022).
 											Responses to partisans are calibrated by a COVID-sensitive behavioral immune system.
-											Paper presentation at the Human Behavior & Evolution Society Conference, Virtual</p>
+											Paper presentation at the Human Behavior & Evolution Society Conference, Virtual. </p>
 										<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (June, 2022)
 											Differences in aggression among kin and non-kin.
 											Paper presentation at the Human Behavior & Evolution Society Conference, Virtual.</p>
@@ -344,6 +353,10 @@
 											<h4 class="item-title">Poster Presentation</h4>
 										</div>
 										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
+										<p>13. <u>Palo A.</u>, <strong>Ko, A.</strong>, & Neuberg, S. N. (April, 2023)
+											Punishing good outcomes & punishing good intentions: Contrasting punishment decisions made by direct recipients vs. third-party observers.
+											Poster presented at Arizona Psychology Undergraduate Research Conference (AZPURC).
+											<br/>[Third Best Poster Award] </p>
 										<p>12. <u>Sabree, K.</u>, <strong>Ko, A.</strong>, Neuberg, S. N., & Kenrick, D. T. (April, 2021)
 											Are you my father? Paternal uncertainty and genetic testing.
 											Poster presented at Arizona Psychology Undergraduate Research Conference (AZPURC), Virtual.</p>
@@ -424,8 +437,12 @@
 									<section class="talk-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-3">Invited talk</h3>
 										<ul class="list-unstyled resume-lang-list">
-											<li class="mb-2">Williams College <span class="text-muted">| Nov. 2022</span></li>
-											<li>Oklahoma State University <span class="text-muted">| Oct. 2022</span></li>
+											<li class="mb-2">University of Pennsylvania, Center for Social Norms and Behavioral Dynamics <span class="text-muted">| Feb. 2024</span></li>
+												<li>University of Toronto, MacLab (Geoff MacDonald) <span class="text-muted">| Apr. 2023</span></li>
+												<li>Adelphi University <span class="text-muted">| Feb. 2023</span></li>
+												<li>Williams College <span class="text-muted">| Nov. 2022</span></li>
+											<li>Oklahoma State University,The OCEAN (Oklahoma Center for Evolutionary ANalysis)
+												 <span class="text-muted">| Oct. 2022</span></li>
 										</ul>
 									</section><!--//talk-section-->
 
@@ -454,7 +471,7 @@
 												<div class="resume-degree font-weight-bold">
 													Social Psychology</div>
 												<div class="resume-degree-time text-muted">
-													2022 Fall <br/>1.3 (1 = Most positive, 5 = Most negative)</div>
+													2022 Fall <br/>(75.3% <u>Most Positive</u>; 22.1% <u>Positive</u>)</div>
 											</li>
 										</ul>
 									</section>
@@ -493,6 +510,8 @@
 												Journal of Social and Personal Relationships,
 												Journal of Happiness Studies,
 												Personality and Individual Differences,
+												Evolutionary Behavioral Science,
+												Social Cognition,
 												Child & Youth Care Forum</i></li>
 										</ul>
 									</section>
